Update assessment results and visualization: refine disparity metrics and adjust best approach recommendations

--- a/code/notebooks/main.ipynb
+++ b/code/notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +72,8 @@
       "1  White       1.0  \n",
       "Using 'pass_bar' as the target variable\n",
       "Initial Fairness Metrics:\n",
-      "Statistical Parity Difference: -0.1904\n",
-      "Disparate Impact: 0.7934\n"
+      "Statistical Parity Difference: -0.2022\n",
+      "Disparate Impact: 0.7804\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -121,23 +121,23 @@
      "text": [
       "\n",
       "Baseline Model Performance:\n",
-      "Accuracy: 0.8981\n",
-      "Balanced Accuracy: 0.6278\n",
+      "Accuracy: 0.9022\n",
+      "Balanced Accuracy: 0.6146\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.69      0.27      0.39       500\n",
-      "         1.0       0.91      0.98      0.94      3660\n",
+      "         0.0       0.63      0.25      0.35       454\n",
+      "         1.0       0.91      0.98      0.95      3706\n",
       "\n",
       "    accuracy                           0.90      4160\n",
-      "   macro avg       0.80      0.63      0.67      4160\n",
+      "   macro avg       0.77      0.61      0.65      4160\n",
       "weighted avg       0.88      0.90      0.88      4160\n",
       "\n",
       "\n",
       "Fairness Metrics for Baseline Model:\n",
-      "Equal Opportunity Difference: -0.0894\n",
-      "Average Odds Difference: -0.2399\n",
-      "Disparate Impact: 0.7899\n",
-      "Statistical Parity Difference: -0.2074\n"
+      "Equal Opportunity Difference: -0.0838\n",
+      "Average Odds Difference: -0.2072\n",
+      "Disparate Impact: 0.8263\n",
+      "Statistical Parity Difference: -0.1710\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -201,54 +201,60 @@
       "Fairness Integrity Framework Results:\n",
       "\n",
       "DATA_METRICS:\n",
-      "  statistical_parity_difference: -0.1904\n",
-      "  disparate_impact: 0.7934\n",
-      "  class_imbalance: 0.1904\n",
+      "  statistical_parity_difference: -0.1901\n",
+      "  disparate_impact: 0.7937\n",
+      "  class_imbalance: 0.1901\n",
       "\n",
       "CLASSIFICATION_METRICS:\n",
-      "  accuracy: 0.9017\n",
-      "  balanced_accuracy: 0.6087\n",
-      "  average_odds_difference: -0.2255\n",
-      "  disparate_impact: 0.8194\n",
-      "  statistical_parity_difference: -0.1783\n",
-      "  equal_opportunity_difference: -0.0879\n",
-      "  theil_index: 0.0423\n"
+      "  accuracy: 0.9022\n",
+      "  balanced_accuracy: 0.6146\n",
+      "  average_odds_difference: -0.2072\n",
+      "  disparate_impact: 0.8263\n",
+      "  statistical_parity_difference: -0.1710\n",
+      "  equal_opportunity_difference: -0.0838\n",
+      "  theil_index: 0.0424\n"
      ]
     }
    ],
    "source": [
-    "# Define a comprehensive fairness evaluation framework\n",
-    "def fairness_integrity_framework(dataset, model, protected_attr, privileged_groups, unprivileged_groups):\n",
+    "# Fixed evaluation framework to properly assess on test data\n",
+    "def fairness_integrity_framework(train_dataset, test_dataset, model, protected_attr, privileged_groups, unprivileged_groups):\n",
     "    \"\"\"\n",
-    "    A framework for evaluating model fairness and integrity across multiple dimensions\n",
+    "    An improved framework for evaluating model fairness and integrity that properly separates\n",
+    "    training and testing data\n",
     "    \"\"\"\n",
-    "    # Extract features and labels\n",
-    "    X = dataset.features\n",
-    "    y = dataset.labels.ravel()\n",
+    "    # Extract features and labels for training\n",
+    "    X_train = train_dataset.features\n",
+    "    y_train = train_dataset.labels.ravel()\n",
+    "    \n",
+    "    # Extract features and labels for testing\n",
+    "    X_test = test_dataset.features\n",
+    "    y_test = test_dataset.labels.ravel()\n",
     "    \n",
     "    # Scale features\n",
     "    scaler = StandardScaler()\n",
-    "    X_scaled = scaler.fit_transform(X)\n",
+    "    X_train_scaled = scaler.fit_transform(X_train)\n",
+    "    X_test_scaled = scaler.transform(X_test)\n",
     "    \n",
-    "    # Train model\n",
-    "    model.fit(X_scaled, y)\n",
+    "    # Train model on training data\n",
+    "    model.fit(X_train_scaled, y_train)\n",
     "    \n",
-    "    # Make predictions\n",
-    "    y_pred = model.predict(X_scaled)\n",
+    "    # Evaluate on test data\n",
+    "    y_pred = model.predict(X_test_scaled)\n",
     "    \n",
     "    # Create dataset with predictions\n",
-    "    pred_dataset = dataset.copy()\n",
+    "    pred_dataset = test_dataset.copy()\n",
     "    pred_dataset.labels = y_pred.reshape(-1, 1)\n",
     "    \n",
-    "    # Calculate fairness metrics\n",
+    "    # Calculate fairness metrics on test data\n",
     "    dataset_metrics = BinaryLabelDatasetMetric(\n",
-    "        dataset=dataset,\n",
+    "        dataset=test_dataset,\n",
     "        unprivileged_groups=unprivileged_groups,\n",
     "        privileged_groups=privileged_groups\n",
     "    )\n",
     "    \n",
     "    classification_metrics = ClassificationMetric(\n",
-    "        dataset=dataset,\n",
+    "        dataset=test_dataset,\n",
     "        classified_dataset=pred_dataset,\n",
     "        unprivileged_groups=unprivileged_groups,\n",
     "        privileged_groups=privileged_groups\n",
@@ -263,8 +269,8 @@
     "                              dataset_metrics.num_positives(privileged=False) / dataset_metrics.num_instances(privileged=False)\n",
     "        },\n",
     "        \"classification_metrics\": {\n",
-    "            \"accuracy\": accuracy_score(y, y_pred),\n",
-    "            \"balanced_accuracy\": balanced_accuracy_score(y, y_pred),\n",
+    "            \"accuracy\": accuracy_score(y_test, y_pred),\n",
+    "            \"balanced_accuracy\": balanced_accuracy_score(y_test, y_pred),\n",
     "            \"average_odds_difference\": classification_metrics.average_odds_difference(),\n",
     "            \"disparate_impact\": classification_metrics.disparate_impact(),\n",
     "            \"statistical_parity_difference\": classification_metrics.statistical_parity_difference(),\n",
@@ -275,9 +281,10 @@
     "    \n",
     "    return fairness_report\n",
     "\n",
-    "# Apply the framework to our baseline model\n",
+    "# Apply the framework to our baseline model - FIXED to match new function signature\n",
     "baseline_integrity_report = fairness_integrity_framework(\n",
-    "    dataset=train,\n",
+    "    train_dataset=train,\n",
+    "    test_dataset=test,  # Now properly passing test dataset\n",
     "    model=baseline_model,\n",
     "    protected_attr=protected_attribute,\n",
     "    privileged_groups=privileged_groups,\n",
@@ -294,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -391,28 +398,29 @@
     }
    ],
    "source": [
-    "# Create dictionary of models/techniques to evaluate\n",
+    "# Dictionary of models to evaluate - properly separating train and test data for consistent evaluation\n",
     "models_to_evaluate = {\n",
-    "    \"Baseline\": (train, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
-    "    \"Reweighing\": (train_reweighed, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
-    "    \"Disparate Impact Remover\": (train_di_removed, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
-    "    \"Random Forest\": (train, RandomForestClassifier(n_estimators=100, random_state=42))\n",
+    "    \"Baseline\": (train, test, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
+    "    \"Reweighing\": (train_reweighed, test, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
+    "    \"Disparate Impact Remover\": (train_di_removed, test_di_removed, LogisticRegression(solver='liblinear', max_iter=1000, random_state=42)),\n",
+    "    \"Random Forest\": (train, test, RandomForestClassifier(n_estimators=100, random_state=42))\n",
     "}\n",
     "\n",
     "# Dictionary to store results\n",
     "fairness_results = {}\n",
     "\n",
     "# Evaluate each technique\n",
-    "for name, (dataset, model) in models_to_evaluate.items():\n",
+    "for name, (train_dataset, test_dataset, model) in models_to_evaluate.items():\n",
     "    print(f\"\\nEvaluating {name}...\")\n",
     "    fairness_results[name] = fairness_integrity_framework(\n",
-    "        dataset=dataset,\n",
+    "        train_dataset=train_dataset,\n",
+    "        test_dataset=test_dataset,\n",
     "        model=model,\n",
     "        protected_attr=protected_attribute,\n",
     "        privileged_groups=privileged_groups,\n",
     "        unprivileged_groups=unprivileged_groups\n",
     "    )\n",
-    "\n",
+    "    \n",
     "# Evaluate post-processed model separately\n",
     "print(\"\\nEvaluating Calibrated Equalized Odds...\")\n",
     "# Extract metrics from test_pred_eq_odds\n",
@@ -423,7 +431,7 @@
     "    privileged_groups=privileged_groups\n",
     ")\n",
     "\n",
-    "# Store results for post-processing\n",
+    "# Handle the special case of Calibrated EqOdds\n",
     "fairness_results[\"Calibrated EqOdds\"] = {\n",
     "    \"classification_metrics\": {\n",
     "        \"accuracy\": accuracy_score(y_test, test_pred_eq_odds.labels.ravel()),\n",
@@ -439,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -449,25 +457,25 @@
       "\n",
       "Comparative Fairness Metrics:\n",
       "                  Technique  accuracy  balanced_accuracy  \\\n",
-      "0                  Baseline    0.9017             0.6087   \n",
-      "1                Reweighing    0.9017             0.6087   \n",
-      "2  Disparate Impact Remover    0.9013             0.6078   \n",
-      "3             Random Forest    1.0000             1.0000   \n",
-      "4         Calibrated EqOdds    0.8947             0.6000   \n",
+      "0                  Baseline    0.9022             0.6146   \n",
+      "1                Reweighing    0.9022             0.6146   \n",
+      "2  Disparate Impact Remover    0.9026             0.6071   \n",
+      "3             Random Forest    0.8925             0.6111   \n",
+      "4         Calibrated EqOdds    0.8995             0.5822   \n",
       "\n",
       "   statistical_parity_difference  disparate_impact  \\\n",
-      "0                        -0.1783            0.8194   \n",
-      "1                        -0.1177            0.8805   \n",
-      "2                        -0.1818            0.8159   \n",
-      "3                        -0.1904            0.7934   \n",
-      "4                        -0.2206            0.7794   \n",
+      "0                        -0.1710            0.8263   \n",
+      "1                        -0.1710            0.8263   \n",
+      "2                        -0.1797            0.8185   \n",
+      "3                        -0.1745            0.8210   \n",
+      "4                        -0.1862            0.8138   \n",
       "\n",
       "   equal_opportunity_difference  average_odds_difference  theil_index  \n",
-      "0                       -0.0879                  -0.2255       0.0423  \n",
-      "1                       -0.0879                  -0.2255       0.0423  \n",
-      "2                       -0.0884                  -0.2347       0.0426  \n",
-      "3                        0.0000                   0.0000       0.0000  \n",
-      "4                       -0.0944                  -0.2949       0.0403  \n"
+      "0                       -0.0838                  -0.2072       0.0424  \n",
+      "1                       -0.0838                  -0.2072       0.0424  \n",
+      "2                       -0.0869                  -0.2325       0.0404  \n",
+      "3                       -0.1086                  -0.1837       0.0528  \n",
+      "4                       -0.0903                  -0.2686       0.0391  \n"
      ]
     },
     {
@@ -594,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -605,9 +613,9 @@
       "# Critical Assessment of Fairness Mitigation Techniques\n",
       "\n",
       "## Dataset Characteristics and Inherent Biases\n",
-      "- The Law School dataset shows a significant **disparate impact** of 0.8194 for the baseline model.\n",
-      "- Statistical parity difference of -0.1783 indicates that White students have a higher probability of passing the bar exam.\n",
-      "- Equal opportunity difference of -0.0879 suggests disparities in true positive rates across racial groups.\n",
+      "- The Law School dataset shows a significant **disparate impact** of 0.8263 for the baseline model.\n",
+      "- Statistical parity difference of -0.1710 indicates that White students have a higher probability of passing the bar exam.\n",
+      "- Equal opportunity difference of -0.0838 suggests disparities in true positive rates across racial groups.\n",
       "\n",
       "## Effectiveness of Mitigation Techniques\n",
       "\n",
@@ -624,7 +632,7 @@
       "## Key Trade-offs and Findings\n",
       "1. **Accuracy vs. Fairness Trade-off**: Some fairness interventions resulted in accuracy reductions.\n",
       "   \n",
-      "2. **Best Overall Approach**: **Random Forest** provided the best fairness improvements, while **Random Forest** maintained the highest accuracy.\n",
+      "2. **Best Overall Approach**: **Reweighing** provided the best fairness improvements, while **Disparate Impact Remover** maintained the highest accuracy.\n",
       "\n",
       "3. **Metric Selection Matters**: Different fairness metrics sometimes showed contradictory results, highlighting the importance of selecting appropriate fairness criteria based on the specific context.\n",
       "\n",
@@ -661,12 +669,16 @@
     "fairness_improvements = {}\n",
     "\n",
     "for tech in techniques:\n",
+    "    # Calculate improvements in fairness metrics (reduction in absolute values)\n",
     "    spd_improvement = abs(baseline_spd) - abs(fairness_results[tech]['classification_metrics']['statistical_parity_difference'])\n",
     "    eod_improvement = abs(baseline_eod) - abs(fairness_results[tech]['classification_metrics']['equal_opportunity_difference'])\n",
     "    \n",
-    "    # Weighted average of improvements (normalize by baseline values)\n",
-    "    fairness_improvements[tech] = 0.5 * (spd_improvement / abs(baseline_spd) if baseline_spd != 0 else 0) + \\\n",
-    "                                 0.5 * (eod_improvement / abs(baseline_eod) if baseline_eod != 0 else 0)\n",
+    "    # Normalize by baseline values to get percentage improvement\n",
+    "    spd_pct = spd_improvement / abs(baseline_spd) if baseline_spd != 0 else spd_improvement\n",
+    "    eod_pct = eod_improvement / abs(baseline_eod) if baseline_eod != 0 else eod_improvement\n",
+    "    \n",
+    "    # Overall fairness improvement score (equal weight to both metrics)\n",
+    "    fairness_improvements[tech] = 0.5 * spd_pct + 0.5 * eod_pct\n",
     "\n",
     "# Find best technique for fairness\n",
     "best_fairness_technique = max(fairness_improvements.items(), key=lambda x: x[1])[0] if fairness_improvements else None\n",
@@ -744,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +764,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Applying best technique (Random Forest) to test data...\n",
+      "Applying best technique (Baseline) to test data...\n",
       "\n",
       "Final Fairness Assessment on Test Data:\n",
-      "Statistical Parity Difference: -0.1508\n",
-      "Disparate Impact: 0.8453\n",
-      "Equal Opportunity Difference: -0.0710\n",
-      "Average Odds Difference: -0.1586\n",
-      "Theil Index: 0.0488\n"
+      "Statistical Parity Difference: -0.1710\n",
+      "Disparate Impact: 0.8263\n",
+      "Equal Opportunity Difference: -0.0838\n",
+      "Average Odds Difference: -0.2072\n",
+      "Theil Index: 0.0424\n"
      ]
     }
    ],
