Update assessment documentation and results: revise disparity metrics and clarify best approach findings

--- a/code/notebooks/main.ipynb
+++ b/code/notebooks/main.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'inFairness': SenSeI and SenSR will be unavailable. To install, run:\n",
+      "pip install 'aif360[inFairness]'\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -54,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +85,8 @@
       "1  White       1.0  \n",
       "Using 'pass_bar' as the target variable\n",
       "Initial Fairness Metrics:\n",
-      "Statistical Parity Difference: -0.2022\n",
-      "Disparate Impact: 0.7804\n"
+      "Statistical Parity Difference: -0.1971\n",
+      "Disparate Impact: 0.7859\n"
      ]
     }
    ],
@@ -112,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,23 +134,23 @@
      "text": [
       "\n",
       "Baseline Model Performance:\n",
-      "Accuracy: 0.9022\n",
-      "Balanced Accuracy: 0.6146\n",
+      "Accuracy: 0.8998\n",
+      "Balanced Accuracy: 0.6197\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.63      0.25      0.35       454\n",
-      "         1.0       0.91      0.98      0.95      3706\n",
+      "         0.0       0.66      0.26      0.37       475\n",
+      "         1.0       0.91      0.98      0.95      3685\n",
       "\n",
       "    accuracy                           0.90      4160\n",
-      "   macro avg       0.77      0.61      0.65      4160\n",
+      "   macro avg       0.78      0.62      0.66      4160\n",
       "weighted avg       0.88      0.90      0.88      4160\n",
       "\n",
       "\n",
       "Fairness Metrics for Baseline Model:\n",
-      "Equal Opportunity Difference: -0.0838\n",
-      "Average Odds Difference: -0.2072\n",
-      "Disparate Impact: 0.8263\n",
-      "Statistical Parity Difference: -0.1710\n"
+      "Equal Opportunity Difference: -0.0784\n",
+      "Average Odds Difference: -0.2418\n",
+      "Disparate Impact: 0.8075\n",
+      "Statistical Parity Difference: -0.1898\n"
      ]
     }
    ],
@@ -190,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,18 +214,18 @@
       "Fairness Integrity Framework Results:\n",
       "\n",
       "DATA_METRICS:\n",
-      "  statistical_parity_difference: -0.1901\n",
-      "  disparate_impact: 0.7937\n",
-      "  class_imbalance: 0.1901\n",
+      "  statistical_parity_difference: -0.2064\n",
+      "  disparate_impact: 0.7755\n",
+      "  class_imbalance: 0.2064\n",
       "\n",
       "CLASSIFICATION_METRICS:\n",
-      "  accuracy: 0.9022\n",
-      "  balanced_accuracy: 0.6146\n",
-      "  average_odds_difference: -0.2072\n",
-      "  disparate_impact: 0.8263\n",
-      "  statistical_parity_difference: -0.1710\n",
-      "  equal_opportunity_difference: -0.0838\n",
-      "  theil_index: 0.0424\n"
+      "  accuracy: 0.8998\n",
+      "  balanced_accuracy: 0.6197\n",
+      "  average_odds_difference: -0.2418\n",
+      "  disparate_impact: 0.8075\n",
+      "  statistical_parity_difference: -0.1898\n",
+      "  equal_opportunity_difference: -0.0784\n",
+      "  theil_index: 0.0428\n"
      ]
     }
    ],
@@ -301,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -457,36 +470,36 @@
       "\n",
       "Comparative Fairness Metrics:\n",
       "                  Technique  accuracy  balanced_accuracy  \\\n",
-      "0                  Baseline    0.9022             0.6146   \n",
-      "1                Reweighing    0.9022             0.6146   \n",
-      "2  Disparate Impact Remover    0.9026             0.6071   \n",
-      "3             Random Forest    0.8925             0.6111   \n",
-      "4         Calibrated EqOdds    0.8995             0.5822   \n",
+      "0                  Baseline    0.8998             0.6197   \n",
+      "1                Reweighing    0.8998             0.6197   \n",
+      "2  Disparate Impact Remover    0.8986             0.6090   \n",
+      "3             Random Forest    0.8974             0.6303   \n",
+      "4         Calibrated EqOdds    0.8990             0.5955   \n",
       "\n",
       "   statistical_parity_difference  disparate_impact  \\\n",
-      "0                        -0.1710            0.8263   \n",
-      "1                        -0.1710            0.8263   \n",
-      "2                        -0.1797            0.8185   \n",
-      "3                        -0.1745            0.8210   \n",
-      "4                        -0.1862            0.8138   \n",
+      "0                        -0.1898            0.8075   \n",
+      "1                        -0.1898            0.8075   \n",
+      "2                        -0.1858            0.8122   \n",
+      "3                        -0.1955            0.8002   \n",
+      "4                        -0.2039            0.7961   \n",
       "\n",
       "   equal_opportunity_difference  average_odds_difference  theil_index  \n",
-      "0                       -0.0838                  -0.2072       0.0424  \n",
-      "1                       -0.0838                  -0.2072       0.0424  \n",
-      "2                       -0.0869                  -0.2325       0.0404  \n",
-      "3                       -0.1086                  -0.1837       0.0528  \n",
-      "4                       -0.0903                  -0.2686       0.0391  \n"
+      "0                       -0.0784                  -0.2418       0.0428  \n",
+      "1                       -0.0784                  -0.2418       0.0428  \n",
+      "2                       -0.0779                  -0.2436       0.0420  \n",
+      "3                       -0.0808                  -0.2418       0.0478  \n",
+      "4                       -0.0856                  -0.2915       0.0387  \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_60905/2724488431.py:91: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_95553/2724488431.py:91: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(ax.get_xticklabels(), rotation=45, ha='right')\n",
-      "/tmp/ipykernel_60905/2724488431.py:99: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_95553/2724488431.py:99: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(ax.get_xticklabels(), rotation=45, ha='right')\n",
-      "/tmp/ipykernel_60905/2724488431.py:106: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+      "/tmp/ipykernel_95553/2724488431.py:106: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
       "  plt.show()\n"
      ]
     }
@@ -602,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -613,9 +626,9 @@
       "# Critical Assessment of Fairness Mitigation Techniques\n",
       "\n",
       "## Dataset Characteristics and Inherent Biases\n",
-      "- The Law School dataset shows a significant **disparate impact** of 0.8263 for the baseline model.\n",
-      "- Statistical parity difference of -0.1710 indicates that White students have a higher probability of passing the bar exam.\n",
-      "- Equal opportunity difference of -0.0838 suggests disparities in true positive rates across racial groups.\n",
+      "- The Law School dataset shows a significant **disparate impact** of 0.8075 for the baseline model.\n",
+      "- Statistical parity difference of -0.1898 indicates that White students have a higher probability of passing the bar exam.\n",
+      "- Equal opportunity difference of -0.0784 suggests disparities in true positive rates across racial groups.\n",
       "\n",
       "## Effectiveness of Mitigation Techniques\n",
       "\n",
@@ -632,7 +645,7 @@
       "## Key Trade-offs and Findings\n",
       "1. **Accuracy vs. Fairness Trade-off**: Some fairness interventions resulted in accuracy reductions.\n",
       "   \n",
-      "2. **Best Overall Approach**: **Reweighing** provided the best fairness improvements, while **Disparate Impact Remover** maintained the highest accuracy.\n",
+      "2. **Best Overall Approach**: **Disparate Impact Remover** provided the best fairness improvements, while **Baseline** maintained the highest accuracy.\n",
       "\n",
       "3. **Metric Selection Matters**: Different fairness metrics sometimes showed contradictory results, highlighting the importance of selecting appropriate fairness criteria based on the specific context.\n",
       "\n",
@@ -756,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -764,20 +777,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Applying best technique (Baseline) to test data...\n",
+      "Applying best technique (Disparate Impact Remover) to test data...\n",
       "\n",
       "Final Fairness Assessment on Test Data:\n",
-      "Statistical Parity Difference: -0.1710\n",
-      "Disparate Impact: 0.8263\n",
-      "Equal Opportunity Difference: -0.0838\n",
-      "Average Odds Difference: -0.2072\n",
-      "Theil Index: 0.0424\n"
+      "Statistical Parity Difference: -0.2619\n",
+      "Disparate Impact: 0.7321\n",
+      "Equal Opportunity Difference: -0.1319\n",
+      "Average Odds Difference: -0.3129\n",
+      "Theil Index: 0.0514\n"
      ]
     }
    ],
    "source": [
     "# Apply the most promising technique to test data\n",
-    "best_technique = best_fairness_technique if fairness_improvements[best_fairness_technique] > 0 else 'Baseline'\n",
+    "best_technique = best_fairness_technique if fairness_improvements[best_fairness_technique] > 0.01 else 'Baseline'\n",
     "print(f\"\\nApplying best technique ({best_technique}) to test data...\")\n",
     "\n",
     "if best_technique == \"Reweighing\":\n",
